bioptechs controller shut down info

--- a/shut-down/index.html
+++ b/shut-down/index.html
@@ -896,6 +896,7 @@
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox"/><span class="task-list-indicator"></span></label> Turn off the Tokai Hit unit by pushing the orange button.</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox"/><span class="task-list-indicator"></span></label> Close the Apollo valve for CO<sub>2</sub> by rotating clockwise 90 degrees until the yellow handle is perpendicular to the tubing.</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox"/><span class="task-list-indicator"></span></label> Lower the objective as far as it'll go.</li>
+<li class="task-list-item"><label class="task-list-control"><input type="checkbox"/><span class="task-list-indicator"></span></label> Turn off the Bioptechs controller by pushing the On/Off button</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox"/><span class="task-list-indicator"></span></label> Remove the Bioptechs objective warmer and set back in box.</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox"/><span class="task-list-indicator"></span></label> Remove stage top incubator lid and set on air table.</li>
 <li class="task-list-item"><label class="task-list-control"><input type="checkbox"/><span class="task-list-indicator"></span></label> Remove water from reservoir using a syringe, and deposit into glass beaker labelled "waste".</li>
